R reporting fixed